--- a/css/position/index.html
+++ b/css/position/index.html
@@ -5,20 +5,19 @@
     <title>元素定位</title>
     <style>
         .float-container{
-            width: 600px;
-            height: auto;
-            background: blue;
+            width:600px;
+            height:auto;
+            background:blue;
         }
         .float-container:after{
             content:"";
             clear:both;
-            display: block;
+            display:block;
         }
     </style>
 </head>
 <body>
-<!--静态定位-->
-    <h1>静态定位   </h1>
+    <h1>静态定位</h1>
     <div>
         <span>姓名</span>
         <span>性别</span>
@@ -27,75 +26,87 @@
         <span>职位</span>
     </div>
     <div>
-        <span>aqaaaa</span>
-        <span>aqaaaa</span>
-        <span>aqaaaa</span>
-        <span>aqaaaa</span>
-        <span>aqaaaa</span>
+        <span>fsldkfjs</span>
+        <span>dfdsf</span>
+        <span>fdsfsdf</span>
+        <span>sdfsdf</span>
+        <span>sdfsdfsdfsd</span>
     </div>
     <div>
-        <span>aqaaaa</span>
-        <span>aqaaaa</span>
-        <span>aqaaaa</span>
-        <span>aqaaaa</span>
-        <span>aqaaaa</span>
+        <span>fsldkfjs</span>
+        <span>dfdsf</span>
+        <span>fdsfsdf</span>
+        <span>sdfsdf</span>
+        <span>sdfsdfsdfsd</span>
     </div>
     <div>
-        <span>aqaaaa</span>
-        <span>aqaaaa</span>
-        <span>aqaaaa</span>
-        <span>aqaaaa</span>
-        <span>aqaaaa</span>
+        <span>fsldkfjs</span>
+        <span>dfdsf</span>
+        <span>fdsfsdf</span>
+        <span>sdfsdf</span>
+        <span>sdfsdfsdfsd</span>
     </div>
 
-<!--浮动定位-->
-<h2>浮动定位</h2>
-<div style="background:blue;width:600px;height:auto;">
-    <div style="height:80px;width:100px;float:left;background:pink;border-left:1px solid #000;"></div>
-    <div style="height:80px;width:100px;float:left;background:pink;border-left:1px solid #000;"></div>
-    <div style="height:80px;width:100px;float:left;background:pink;border-left:1px solid #000;"></div>
-    <div style="height:80px;width:100px;float:left;background:pink;border-left:1px solid #000;"></div>
-    <div style="height:80px;width:100px;float:left;background:pink;border-left:1px solid #000;"></div>
-    <div style="clear: both"></div>
-</div>
-
-<br>
-<div class="float-container">
-    <div style="height:80px;width:100px;float:left;background:pink;border-left:1px solid #000;"></div>
-    <div style="height:80px;width:100px;float:left;background:pink;border-left:1px solid #000;"></div>
-    <div style="height:80px;width:100px;float:left;background:pink;border-left:1px solid #000;"></div>
-    <div style="height:80px;width:100px;float:left;background:pink;border-left:1px solid #000;"></div>
-    <div style="height:80px;width:100px;float:left;background:pink;border-left:1px solid #000;"></div>
-</div>
-
-<br>
-<div style="background:blue;width:600px;height:auto;overflow:hidden;">
-    <div style="height:80px;width:100px;float:left;background:pink;border-left:1px solid #000;"></div>
-    <div style="height:80px;width:100px;float:left;background:pink;border-left:1px solid #000;"></div>
-    <div style="height:80px;width:100px;float:left;background:pink;border-left:1px solid #000;"></div>
-    <div style="height:80px;width:100px;float:left;background:pink;border-left:1px solid #000;"></div>
-    <div style="height:80px;width:100px;float:left;background:pink;border-left:1px solid #000;"></div>
-</div>
-
-
-<!--相对定位-->
-<div>
-    <div style="width:60px;height:60px;background:blue;margin-top:5px;"></div>
-    <div style="position:relative;left:50px;top:50px;width:60px;height:60px;background:blue;margin-top:5px;"></div>
-    <div style="width:60px;height:60px;background:blue;margin-top:5px;"></div>
-</div>
-
-
-<h1>绝对定位</h1>
-<div>
-    <div style="width:100px;height:100px;background:red;position:absolute;left:50%;top:0;z-index:-1;"></div>
-    <div style="width:100px;height:100px;background:green;position:absolute;left:50%;top:20px;"></div>
-</div>
-
-<div>
-    <div style="width: 300px;height:300px;background:gray;position :relative;">
-        <div style="width: 100px;height:100px;background:red;position :absolute;left:30px;top:30px;"></div>
+    <h1>浮动定位</h1>
+    <div style="background:blue;height:auto;width:600px;">
+        <div style="border-left:1px solid #000;background:pink;float:left;height:80px;width:100px;">
+            <div style="width:40px;height:40px;background:black;position:absolute;top:10px;left:20px;">
+            </div>
+        </div>
+        <div style="border-left:1px solid #000;background:pink;float:left;height:80px;width:100px;">
+        </div>
+        <div style="border-left:1px solid #000;background:pink;float:left;height:80px;width:100px;">
+        </div>
+        <div style="border-left:1px solid #000;background:pink;float:left;height:80px;width:100px;">
+        </div>
+        <div style="border-left:1px solid #000;background:pink;float:left;height:80px;width:100px;">
+        </div>
     </div>
-</div>
+
+    <div class="float-container">
+        <div style="border-left:1px solid #000;background:pink;float:left;height:80px;width:100px;">
+        </div>
+        <div style="border-left:1px solid #000;background:pink;float:left;height:80px;width:100px;">
+        </div>
+        <div style="border-left:1px solid #000;background:pink;float:left;height:80px;width:100px;">
+        </div>
+        <div style="border-left:1px solid #000;background:pink;float:left;height:80px;width:100px;">
+        </div>
+        <div style="border-left:1px solid #000;background:pink;float:left;height:80px;width:100px;">
+        </div>
+    </div>
+
+    <div style="overflow:auto;background:blue;height:auto;width:600px;">
+        <div style="border-left:1px solid #000;background:pink;float:left;height:80px;width:100px;">
+        </div>
+        <div style="border-left:1px solid #000;background:pink;float:left;height:80px;width:100px;">
+        </div>
+        <div style="border-left:1px solid #000;background:pink;float:left;height:80px;width:100px;">
+        </div>
+        <div style="border-left:1px solid #000;background:pink;float:left;height:80px;width:100px;">
+        </div>
+        <div style="border-left:1px solid #000;background:pink;float:left;height:80px;width:100px;">
+        </div>
+    </div>
+
+    <h1>相对定位</h1>
+    <div>
+        <div style="width:60px;height:60px;background:blue;margin-top:5px;"></div>
+        <div style="left:50px;top:50px;position:relative;width:60px;height:60px;background:blue;margin-top:5px;"></div>
+        <div style="width:60px;height:60px;background:blue;margin-top:5px;"></div>
+    </div>
+
+    <h1>绝对定位</h1>
+    <div>
+        <div style="z-index:-100;top:0;left:50%;width:100px;height:100px;background:red;position:absolute;">
+        </div>
+        <div style="top:20px;left:50%;width:100px;height:100px;background:green;position:absolute;">
+        </div>
+    </div>
+
+    <div style="width:300px;height:300px;background:gray;position:relative;">
+        <div style="width:100px;height:100px;position:absolute;left:30px;top:30px;background:red;"></div>
+    </div>
+
 </body>
 </html>
