--- a/ecmascript/index.html
+++ b/ecmascript/index.html
@@ -2,14 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>ECMAscript</title>
-    <!--<script src="index.js"></script>-->
-    <!--<script src="type-transform.js"></script>-->
-    <!--<script src="function.js"></script>-->
-    <!--<script src="event.js"></script>-->
-    <script src="if-for.js"></script>
+    <title>ECMAScript</title>
 </head>
 <body>
-
+<!--<script src="index.js"></script>-->
+<!--<script src="type-transform.js"></script>-->
+<!--<script src="function.js"></script>-->
+<!--<script src="event.js"></script>-->
+<script src="if-for.js"></script>
 </body>
 </html>
