--- a/ecmascript/scope/index.html
+++ b/ecmascript/scope/index.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>变量作用域</title>
-
 </head>
 <body>
-<script src="scope.js"></script>
+
+<script src="scope.js">
+</script>
 </body>
 </html>
