--- a/index.html
+++ b/index.html
@@ -2,24 +2,35 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>首页</title>
     <link rel="stylesheet" href="./style/index.css">
 </head>
 <body>
 <div class="container">
     <div class="item-wrapper">
         <div class="main-item">
-            <div class="carousel"><img src="images/carousel-1.jpg"/></div>
-            <div class="carousel"><img src="images/carousel-2 .jpg"/></div>
-            <div class="carousel"><img src="images/carousel-3.jpg"/></div>
-            <div class="carousel"><img src="images/carousel-4.jpg"/></div>
-            <div class="carousel"><img src="images/carousel-5.jpg"/></div>
+            <div class="carousel">
+                <img src="./images/carousel1.jpg" alt="轮播1">
+            </div>
+            <div class="carousel">
+                <img src="./images/carousel2.jpg" alt="轮播2">
+            </div>
+            <div class="carousel">
+                <img src="./images/carousel3.jpg" alt="轮播3">
+            </div>
+            <div class="carousel">
+                <img src="./images/carousel4.jpg" alt="轮播4">
+            </div>
+            <div class="carousel">
+                <img src="./images/carousel5.jpg" alt="轮播5">
+            </div>
         </div>
         <div class="main-item">
-
         </div>
     </div>
 </div>
 <script src="./scripts/index.js"></script>
 </body>
 </html>
+
+
